WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292744
[macOS] webkit.org doesn't render completely after showing/hiding the sidebar
https://bugs.webkit.org/show_bug.cgi?id=292744
Summary
[macOS] webkit.org doesn't render completely after showing/hiding the sidebar
Wenson Hsieh
Reported
2025-05-08 16:03:07 PDT
rdar://149499441
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-05-08 17:44:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45139
EWS
Comment 2
2025-05-09 08:45:05 PDT
Committed
294711@main
(2f1d182fbf18): <
https://commits.webkit.org/294711@main
> Reviewed commits have been landed. Closing PR #45139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug