[macOS] webkit.org doesn't render completely after showing/hiding the sidebar https://bugs.webkit.org/show_bug.cgi?id=292744 rdar://149499441

Reviewed by Megan Gardner and Aditya Keerthi.

Changing obscured content insets on macOS (e.g. changing sidebar width, or navigation bar height by
toggling the favorites bar) causes the viewport size for CSS viewport units to change, but currently
doesn't invalidate any element styles that are dependent on viewport units. As a result, `vw` and
`vh` may become stale when changing obscured content insets, until the user resizes the window (or
otherwise forces style to be recalculated for elements that use viewport units). On webkit.org, this
ends up being the width of the main content, which has `width: 100vw;`.

To fix this, we call `updateViewportUnitsOnResize()` when obscured content insets change.

* LayoutTests/fast/css/viewport-units-after-changing-obscured-content-insets-expected.html: Added.
* LayoutTests/fast/css/viewport-units-after-changing-obscured-content-insets.html: Added.

Add a layout test to verify that adding and then removing top/left content insets leaves viewport
units in its original state. The test ends up being flaky without this fix.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::obscuredContentInsetsDidChange):

See above.

Canonical link: https://commits.webkit.org/294711@main